--- a/twitchredirect.html
+++ b/twitchredirect.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Twitch bağlanıyor...</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Twitch Bağlanıyor...</title>
 </head>
 <body>
+  <a href="https://id.twitch.tv/oauth2/authorize?client_id=YOUR_CLIENT_ID&redirect_uri=YOUR_SUCCESS_REDIRECT_URI&response_type=token&scope=user:read:email%20user:read:broadcast">Authorize with Twitch</a>
+
   <script>
-    // URL'den erişim token'ını al
+    // Extract the access token from the URL hash
     const params = new URLSearchParams(window.location.hash.substring(1));
-    const token = params.get('access_token');
+    const accessToken = params.get('access_token');
 
-    if (token) {
-      // Token'ı localStorage'da sakla
-      localStorage.setItem('twitchToken', token);
+    if (accessToken) {
+      console.log('Access Token:', accessToken);
+      localStorage.setItem('twitchToken', accessToken);
 
-      // Başarıyla bağlandığınızı belirten bir sayfaya yönlendirme
-      window.location.href = 'https://lem0n0fficial.github.io/ozgevebaris/twitchredirectsuccess.html'; // Başarı sayfası URL'si
+      // Now that we have the token, we can call the Twitch API to get the username
+      fetch('https://api.twitch.tv/helix/users', {
+        headers: {
+          'Authorization': 'Bearer ' + accessToken,
+          'Client-Id': 'YOUR_CLIENT_ID'
+        }
+      })
+        .then(response => response.json())
+        .then(data => {
+          if (data.data && data.data.length > 0) {
+            const username = data.data[0].login;
+            console.log('Twitch Username:', username);
+            localStorage.setItem('twitchUsername', username);
+          } else {
+            console.error('Failed to retrieve user data from Twitch API.');
+          }
+        })
+        .catch(error => console.error('Error fetching Twitch user data:', error));
     } else {
-      // Hata oluştuysa yönlendirme
-      window.location.href = 'https://lem0n0fficial.github.io/ozgevebaris/twitchredirectfailed.html'; // Hata sayfası URL'si
+      console.log('No access token found.');
     }
   </script>
 </body>
