--- a/twitchredirect.html
+++ b/twitchredirect.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Twitch Bağlanıyor...</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Twitch OAuth Redirect</title>
 </head>
 <body>
-  <a href="https://id.twitch.tv/oauth2/authorize?client_id=YOUR_CLIENT_ID&redirect_uri=YOUR_SUCCESS_REDIRECT_URI&response_type=token&scope=user:read:email%20user:read:broadcast">Authorize with Twitch</a>
+  <h1>Twitch User Information</h1>
+  <p id="status">Fetching user data...</p>
+  <div id="user-info" style="display: none;">
+    <center>
+    <img id="profile-image" alt="Profile Image" style="width: 100px; height: 100px;">
+    <p><strong>Esenlikler,</strong> <span id="username"></span></p>
+    </center>
+  </div>
 
   <script>
-    // Extract the access token from the URL hash
-    const params = new URLSearchParams(window.location.hash.substring(1));
-    const accessToken = params.get('access_token');
+    // Get the access token from the URL fragment
+    const urlParams = new URLSearchParams(window.location.hash.substring(1));
+    const accessToken = urlParams.get('access_token');
 
     if (accessToken) {
-      console.log('Access Token:', accessToken);
-      localStorage.setItem('twitchToken', accessToken);
+      // Store the access token in localStorage
+      localStorage.setItem('twitch_access_token', accessToken);
 
-      // Now that we have the token, we can call the Twitch API to get the username
-      fetch('https://api.twitch.tv/helix/users', {
-        headers: {
-          'Authorization': 'Bearer ' + accessToken,
-          'Client-Id': 'YOUR_CLIENT_ID'
-        }
-      })
-        .then(response => response.json())
-        .then(data => {
-          if (data.data && data.data.length > 0) {
-            const username = data.data[0].login;
-            console.log('Twitch Username:', username);
-            localStorage.setItem('twitchUsername', username);
-          } else {
-            console.error('Failed to retrieve user data from Twitch API.');
+      // Function to fetch user information from Twitch
+      async function fetchTwitchUserData() {
+        const response = await fetch('https://api.twitch.tv/helix/users', {
+          headers: {
+            'Authorization': `Bearer ${accessToken}`,
+            'Client-Id': 'e4k95eo31jhm8i33tikukmtehoayfo'  // Replace with your client ID
           }
-        })
-        .catch(error => console.error('Error fetching Twitch user data:', error));
+        });
+
+        const data = await response.json();
+        const user = data.data[0];
+
+        // Display the user information
+        document.getElementById('username').innerText = user.display_name;
+        document.getElementById('profile-image').src = user.profile_image_url;
+        document.getElementById('status').style.display = 'none';
+        document.getElementById('user-info').style.display = 'block';
+      }
+
+      // Fetch user data
+      fetchTwitchUserData().catch(error => {
+        console.error('Error fetching Twitch user data:', error);
+        document.getElementById('status').innerText = 'Error fetching user data.';
+      });
     } else {
-      console.log('No access token found.');
+      document.getElementById('status').innerText = 'Access token not found.';
     }
   </script>
 </body>
